--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CFB Analyzer</title>
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/src/assets/logos/cfbFavicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/src/assets/logos/cfbFavicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/src/assets/logos/cfbFavicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="/src/assets/logos/cfbFavicon/site.webmanifest" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>CFB Analyzer</title>
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/src/assets/logos/cfbFavicon/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/src/assets/logos/cfbFavicon/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/src/assets/logos/cfbFavicon/favicon-16x16.png"
+        />
+        <link
+            rel="manifest"
+            href="/src/assets/logos/cfbFavicon/site.webmanifest"
+        />
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
