--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             rel="manifest"
             href="/src/assets/logos/cfbFavicon/site.webmanifest"
         />
+        <link rel="stylesheet" href="src/styles/index.css" />
     </head>
     <body>
         <div id="root"></div>
