--- a/index.html
+++ b/index.html
@@ -7,24 +7,20 @@
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="/src/assets/logos/cfbFavicon/apple-touch-icon.png"
-        />
+            href="/src/assets/logos/cfbFavicon/apple-touch-icon.png" />
         <link
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="/src/assets/logos/cfbFavicon/favicon-32x32.png"
-        />
+            href="/src/assets/logos/cfbFavicon/favicon-32x32.png" />
         <link
             rel="icon"
             type="image/png"
             sizes="16x16"
-            href="/src/assets/logos/cfbFavicon/favicon-16x16.png"
-        />
+            href="/src/assets/logos/cfbFavicon/favicon-16x16.png" />
         <link
             rel="manifest"
-            href="/src/assets/logos/cfbFavicon/site.webmanifest"
-        />
+            href="/src/assets/logos/cfbFavicon/site.webmanifest" />
         <link rel="stylesheet" href="src/styles/index.css" />
     </head>
     <body>
